[CreateAccountSettingsService] use unmodifyable lists